--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.8/angular.min.js"></script>
   </head>
   <body>
-    <h1>andy.my</h1>
-    <hr>
-    <p>Coming Soon</p>
+    <div class="container">
+        <h1>andy.my</h1>
+        <hr>
+        <p>Coming Soon</p>    
+    </div>
   </body>
 </html>
