--- a/index.html
+++ b/index.html
@@ -2,9 +2,31 @@
 <html lang="en" ng-app>
   <head>
     <meta charset="utf-8">
-    <title>andy.my - life is about discovery and learning</title>
+    <title>Andy.MY - Life is about Discovery and Learning</title>
         
+    <meta name="viewport" content="width=device-width, height=device-height initial-scale=1.0, user-scalable=no">
+    <meta name="description" content="Andy.MY - Life is about Discovery and Learning - Blog by Andy Nyau">
+    <meta name="author" content="Andy Nyau">
+
+    <meta property="og:site_name" content="Andy.MY">
+    <meta property="og:url" content="https://andy.my/">
+    <meta property="og:type" content="article">
+    <meta property="og:title" content="andy.my">
+    <meta property="og:description" content="Andy.MY - Life is about Discovery and Learning - Blog by Andy Nyau">
+    <meta property="og:image" content="">
+    <meta property="og:image:width" content="266">
+    <meta property="og:image:height" content="266">
+
+    <meta name="theme-color" content="#000000">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+
+    <!--[if lt IE 9]>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+    <![endif]-->
+
     <link href="/favicon.ico" rel="shortcut icon" />
+    <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/content/stylesheets/layout.css" />    
   </head>
   <body>    
@@ -19,7 +41,7 @@
             <a class="brand" href="/">
               <canvas id="cvsBackground" class="branding"></canvas>
               <canvas id="cvsForeground" class="branding"></canvas>
-              <span>ANDY.MY</span>
+              <span>Andy.MY</span>
             </a>
             <button id="btnMenuToggle" class="toggle-button">
               <div></div>
