added meteor effect

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <link rel="stylesheet" href="/content/stylesheets/layout.css" />    
   </head>
   <body>    
+    <canvas id="bgCanvas"></canvas>
     <div class="container">
       <div class="content">
           <h1>andy.my</h1>
