https reference for google font

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <![endif]-->
 
     <link href="/favicon.ico" rel="shortcut icon" />
-    <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/content/stylesheets/layout.css" />    
   </head>
   <body>    
