google adsense js

--- a/index.html
+++ b/index.html
@@ -34,7 +34,15 @@
     <meta name="theme-color" content="#ffffff">
 
     <link href='https://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="/content/stylesheets/layout.css" />    
+    <link rel="stylesheet" href="/content/stylesheets/layout.css" />
+    
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({
+              google_ad_client: "ca-pub-3448503740703613",
+              enable_page_level_ads: true
+        });
+    </script>
   </head>
   <body>
     <div class="cloud-container">
